force-app/main/default/objects/Account/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <label>Account_Email</label>
    <type>Email</type>
</CustomField>