force-app/main/default/objects/Account/fields/Birthday_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birthday Email Sent</label>
    <type>Checkbox</type>
</CustomField>