force-app/main/default/objects/Account/fields/Last_Bday_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Bday_email_sent__c</fullName>
    <label>Last Bday email sent</label>
    <type>Date</type>
</CustomField>