force-app/main/default/objects/Account/fields/Previous_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contact_Name__c</fullName>
    <label>Previous Contact Name</label>
    <type>TextArea</type>
</CustomField>